<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="fr.harkame.tp1.activity.creation.EventCreationActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/eventCreationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/example_my_event"
            android:singleLine="true"
            android:textSize="22sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150sp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/eventCreationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250sp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/eventCreationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_sport"
            android:singleLine="true"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350sp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/eventCreationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/example_sport"
            android:singleLine="true"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="450sp"
        android:orientation="vertical"
        android:gravity="center">

    <Button
        android:id="@+id/eventCreationValidate"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:background="@drawable/ic_add_event"
        android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>
</RelativeLayout>