<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="32sp"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/eventDetailsName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="22sp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/eventDetailsNameError"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_error"
                    android:layout_gravity="end"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100sp"
            android:layout_marginStart="50dp"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="22sp"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/eventDetailsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="200sp"
            android:layout_marginStart="50dp"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="32sp"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/eventDetailsType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/ripple_effect"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="300sp"
            android:layout_marginStart="50dp"
            android:orientation="vertical"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/description"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/eventDetailsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="22sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="450sp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/eventDetailsModify"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:text="@string/modify"
                android:textColor="@color/white"
                android:background="@drawable/green_button"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginEnd="50sp"
            />

            <Button
                android:id="@+id/eventDetailsDelete"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:background="@drawable/red_button"
                android:gravity="center_vertical|center_horizontal"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>